<resources>
    <string name="app_name">BEDMC Connect</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="action_settings">Log Out</string>
    <string name="app_head">BEDMC Connect</string>
    <string name="userid"> UserId ( यूजर आईडी )</string>
    <string name="pass"> Password ( पासवर्ड )</string>
    <string name="name">Name ( नाम )</string>
    <string name="loanamt">Enter The Remarks</string>
    <string name="Status">Status</string>
    <string name="dist">Posted District ( पोस्ट किया गया जिला )* </string>
    <string name="Block">Posted Block ( पोस्ट किया गया प्रखंड )* </string>
    <string name="homdist">Home District ( गृह ज़िला )* </string>
    <string name="dob">Date of Birth ( जन्म की तारीख )* </string>
    <string name="doj">Date of Joining( शामिल होने की तिथि )* </string>
    <string name="pradd">Present Address (वर्तमान पता )* </string>
    <string name="loading_fail">Loading Fail !</string>
    <string name="post">Post ( पद )* </string>
    <string name="gender">Gender ( लिंग )* </string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="employe_id">Employe Id</string>
    <string name="employe_name">Employe Name</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="ac_no">Account No.</string>
    <string name="ifsc">IFSC</string>
    <string name="pan">Pan No</string>
    <string name="udid">Aadhar No</string>
    <string name="mark">Please Mark Your Attendance For Today !</string>
    <string name="google_maps_key">AIzaSyC9FmGKQh91QcWBg_XU-iJuUW5NwQQeYKw</string>
    <string name="jan">January</string>
    <string name="fab">February</string>
    <string name="mar">March</string>
    <string name="apr">April</string>
    <string name="may">May</string>
    <string name="jun">June</string>
    <string name="jul">July</string>
    <string name="aug">August</string>
    <string name="spt">September</string>
    <string name="oct">October</string>
    <string name="nov">November</string>
    <string name="dec">December</string>
    <string name="apply_leave">APPLY LEAVE</string>

    <string name="ac">Account Number </string>
    <string name="date_of_joining">Date Of Joining </string>
    <string name="ifsc_code">Ifsc Code</string>
    <string name="pan_no">Pan Number</string>
    <string name="aadhaar_number">Aadhaar Number</string>
    <string name="applyed_leave"> leaves pending for approval</string>
    <string name="submit">Submit</string>
    <string name="select_project">Select Project</string>
    <string name="log_type">Log Type</string>
    <string name="select_time">Select Time</string>
    <string name="sign_to_connect_with_us">Sign to connect with us</string>
    <string name="sign_in">Sign in</string>
    <string name="forget_password">Forget password ?</string>
    <string name="login">Login ( लॉगिन करें )</string>
    <string name="fill_assignment">Fill Assignment</string>
</resources>
