<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/loginbg"
    tools:context="Upasthiti.vistor_vision.in.eAttendance.Activity.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrol_view"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginTop="2dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:elevation="4dp"
                android:src="@drawable/bedmc"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp" />

            <TextView
                android:id="@+id/login_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/logo"
                android:paddingBottom="5dp"
                android:gravity="center_horizontal"
                android:text="@string/app_head"
                android:textColor="#fff"
                android:textSize="30dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/login_sub_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_title"
                android:layout_marginBottom="10dp"
                android:gravity="center_horizontal"
                android:text="@string/sign_to_connect_with_us"
                android:fontFamily="serif-monospace"
                android:textColor="#eee"
                android:textSize="18dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_below="@+id/login_sub_title"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/sign_in"
                    android:textColor="#fff"
                    android:fontFamily="serif-monospace"
                    android:textSize="25dp"
                    android:textAllCaps="true"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_title"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="60dp"
                android:orientation="vertical"
                android:padding="20dp">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_marginBottom="10dp"
                        android:theme="@style/MyAppTheme"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_User_Name"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:drawableEnd="@drawable/ic_user"
                            android:singleLine="true"
                            android:textAllCaps="true"
                            android:gravity="left"
                            android:maxLength="10"
                            android:imeOptions="actionNext"
                            android:hint="@string/userid"
                            android:textColor="@color/white"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:theme="@style/MyAppTheme"
                        android:layout_height="wrap_content"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_pass"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/pass"
                            android:inputType="textPassword" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/forget_password"
                        android:textColor="#fff"
                        android:layout_margin="5dp"
                        android:id="@+id/tv_fort_pass"
                        android:textAlignment="viewEnd"
                        android:textSize="18dp"/>

                    <Button
                        android:id="@+id/btn_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bluegradientbuttonshape"
                        android:layout_marginTop="30dp"
                        android:text="@string/login"
                        android:drawableEnd="@drawable/ic_double_arrow_24px"
                        android:onClick="Login"
                        android:paddingRight="10sp"
                        android:textAllCaps="false"
                        android:textColor="#fff"
                        android:textSize="18sp" />

                    <ImageView
                        android:id="@+id/logo1"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:elevation="4dp"
                        android:src="@drawable/vvlogo"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="45dp" />
                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:gravity="center_horizontal"
                        android:text="Vistar Vision"
                        android:fontFamily="serif-monospace"
                        android:textColor="#fff"
                        android:textSize="25dp" />

                </LinearLayout>

            </RelativeLayout>

        </RelativeLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/scrol_view"
        android:layout_gravity="bottom"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/txtVersion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:gravity="center"
            android:text="App Version"
            android:visibility="visible"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:typeface="serif" />

    </RelativeLayout>

</RelativeLayout>