<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context="Upasthiti.vistor_vision.in.eAttendance.Activity.registeration">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_gd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_gd"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimaryDark"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme" />
    </com.google.android.material.appbar.AppBarLayout>


    <include
        android:id="@+id/footer"
        layout="@layout/footer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical"
        android:layout_below="@+id/appbar_gd"
        android:layout_above="@+id/footer"
        android:layout_alignParentStart="true">


        <ScrollView
            android:id="@+id/parent_scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="2dp"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="0dp"
                    android:visibility="gone"
                    android:layout_marginRight="5dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_emp_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLength="16"
                        android:singleLine="true"
                        android:textSize="8pt"
                        android:hint="@string/employe_id" />

                </com.google.android.material.textfield.TextInputLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:background="@drawable/border"
                        android:orientation="horizontal"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        tools:ignore="UselessParent">

                        <Spinner
                            android:id="@+id/spn_dist"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="10dp"
                            android:paddingTop="8dp"
                            android:layout_marginBottom="2dp"
                            android:spinnerMode="dropdown" />

                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="9dp"
                        android:layout_marginTop="-5dp"
                        android:background="#fff"
                        android:paddingLeft="3dp"
                        android:paddingTop="3dp"
                        android:paddingRight="3dp"
                        android:text="@string/homdist"
                        android:textColor="@color/colorAccent" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:background="@drawable/border"
                        android:orientation="horizontal"
                        android:paddingTop="5dp"
                        tools:ignore="UselessParent">

                        <ImageView
                            android:id="@+id/btncaladob"
                            android:layout_width="35dp"
                            android:layout_height="38dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginRight="10dp"
                            android:src="@drawable/calendaricon"/>
                        <View
                            android:layout_width="1dp"
                            android:background="#eee"
                            android:layout_alignRight="@+id/btncaladoj"
                            android:layout_height="37dp"/>
                        <TextView
                            android:id="@+id/tvdob"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_alignParentTop="true"
                            android:maxLength="12"
                            android:gravity="center_vertical"
                            android:textStyle="bold"
                            android:textColor="@android:color/black"
                            android:textSize="16sp" />

                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="9dp"
                        android:layout_marginTop="-5dp"
                        android:background="#fff"
                        android:paddingLeft="3dp"
                        android:paddingTop="3dp"
                        android:paddingRight="3dp"
                        android:text="@string/dob"
                        android:textColor="@color/colorAccent" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/Rl_subDiv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:visibility="visible"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:background="@drawable/border"
                        android:orientation="horizontal"
                        android:paddingTop="5dp"
                        tools:ignore="UselessParent">

                        <ImageView
                            android:id="@+id/btncaladoj"
                            android:layout_width="35dp"
                            android:layout_height="38dp"
                            android:layout_marginRight="10dp"
                            android:layout_marginTop="5dp"
                            android:src="@drawable/calendaricon"/>
                        <View
                            android:layout_width="1dp"
                            android:background="#eee"
                            android:layout_alignRight="@+id/btncaladob"
                            android:layout_height="37dp"/>
                        <TextView
                            android:id="@+id/tvdoj"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_alignParentTop="true"
                            android:maxLength="12"
                            android:gravity="center_vertical"
                            android:textStyle="bold"
                            android:textColor="@android:color/black"
                            android:textSize="16sp" />

                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="9dp"
                        android:layout_marginTop="-5dp"
                        android:background="#fff"
                        android:paddingLeft="3dp"
                        android:paddingTop="3dp"
                        android:paddingRight="3dp"
                        android:text="@string/doj"
                        android:textColor="@color/colorAccent" />
                </RelativeLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginRight="5dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_preAdd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minLines="3"
                        android:maxLines="6"
                        android:hint="@string/pradd" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginRight="5dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_ac_no"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:maxLength="16"
                        android:singleLine="true"
                        android:hint="@string/ac_no" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginRight="5dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_ifsc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLength="11"
                        android:singleLine="true"
                        android:inputType="textCapCharacters"
                        android:textAllCaps="true"
                        android:textSize="8pt"
                        android:hint="@string/ifsc" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginRight="5dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_pan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLength="10"
                        android:textAllCaps="true"
                        android:inputType="textCapCharacters"
                        android:singleLine="true"
                        android:hint="@string/pan" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginRight="5dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_aadhar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLength="12"
                        android:inputType="number"
                        android:singleLine="true"
                        android:hint="@string/udid" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginRight="5dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_mob_no"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLength="10"
                        android:inputType="phone"
                        android:singleLine="true"
                        android:hint="@string/mobile_no" />

                </com.google.android.material.textfield.TextInputLayout>

                   <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <Button
                        android:id="@+id/btn_save"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:layout_weight="1"
                        android:background="@drawable/bluegradientbuttonshape"
                        android:text="@string/save"
                        android:textAllCaps="false"
                        android:textColor="#fff"
                        android:textSize="15sp"
                        tools:ignore="ButtonStyle" />

                    <Button
                        android:id="@+id/btn_cancel"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:layout_weight="1"
                        android:background="@drawable/bluegradientbuttonshape"
                        android:text="@string/cancel"
                        android:textAllCaps="false"
                        android:textColor="#fff"
                        android:textSize="15sp"
                        tools:ignore="ButtonStyle" />
                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</RelativeLayout>